ngform removed from html

--- a/src/app/pages/contact-us/contact-us.component.html
+++ b/src/app/pages/contact-us/contact-us.component.html
@@ -70,36 +70,35 @@
 						Send Us Message
 					</h2>
 					<p class="subheading mb-4">"we always take care of clients seriously"</p>
-					<form class="form-contact" id="contactForm" data-toggle="validator" novalidate="false">
+					<form class="form-contact" id="contactForm">
 						<div class="row">
 							<div class="col-sm-6 col-md-6">
 								<div class="form-group">
-									<input type="text" class="form-control" ngModel name="name" placeholder="Enter Name" required>
+									<input type="text" class="form-control" placeholder="Enter Name" required>
 									<div class="help-block with-errors"></div>
 								</div>
 							</div>
 							<div class="col-sm-6 col-md-6">
 								<div class="form-group">
-									<input type="email" class="form-control" ngModel name="email" placeholder="Enter Email" required>
+									<input type="email" class="form-control" placeholder="Enter Email" required>
 									<div class="help-block with-errors"></div>
 								</div>
 							</div>
 							<div class="col-sm-6 col-md-6">
 								<div class="form-group">
-									<input type="text" class="form-control" ngModel name="subject" placeholder="Subject" required>
+									<input type="text" class="form-control" name="subject" placeholder="Subject" required>
 									<div class="help-block with-errors"></div>
 								</div>
 							</div>
 							<div class="col-sm-6 col-md-6">
 								<div class="form-group">
-									<input type="text" class="form-control" ngModel name="phone" placeholder="Enter Phone Number"
-										required>
+									<input type="text" class="form-control" name="phone" placeholder="Enter Phone Number" required>
 									<div class="help-block with-errors"></div>
 								</div>
 							</div>
 						</div>
 						<div class="form-group">
-							<textarea ngModel name="message" class="form-control" rows="6" placeholder="Enter Your Message"
+							<textarea name="message" class="form-control" rows="6" placeholder="Enter Your Message"
 								required></textarea>
 							<div class="help-block with-errors"></div>
 						</div>
