--- a/src/app/pages/contact-us/contact-us.component.html
+++ b/src/app/pages/contact-us/contact-us.component.html
@@ -74,32 +74,36 @@
 						<div class="row">
 							<div class="col-sm-6 col-md-6">
 								<div class="form-group">
-									<input type="text" class="form-control" placeholder="Enter Name" required>
+									<input type="text" class="form-control" placeholder="Enter Name" id="name" formControlName="name"
+										required>
 									<div class="help-block with-errors"></div>
 								</div>
 							</div>
 							<div class="col-sm-6 col-md-6">
 								<div class="form-group">
-									<input type="email" class="form-control" placeholder="Enter Email" required>
+									<input type="email" class="form-control" placeholder="Enter Email" id="email" formControlName="email"
+										required>
 									<div class="help-block with-errors"></div>
 								</div>
 							</div>
 							<div class="col-sm-6 col-md-6">
 								<div class="form-group">
-									<input type="text" class="form-control" name="subject" placeholder="Subject" required>
+									<input type="text" class="form-control" placeholder="Subject" id="subject" formControlName="subject"
+										required>
 									<div class="help-block with-errors"></div>
 								</div>
 							</div>
 							<div class="col-sm-6 col-md-6">
 								<div class="form-group">
-									<input type="text" class="form-control" name="phone" placeholder="Enter Phone Number" required>
+									<input type="text" class="form-control" name="phone" placeholder="Enter Phone Number" id="phone"
+										formControlName="phone" required>
 									<div class="help-block with-errors"></div>
 								</div>
 							</div>
 						</div>
 						<div class="form-group">
-							<textarea name="message" class="form-control" rows="6" placeholder="Enter Your Message"
-								required></textarea>
+							<textarea name="message" class="form-control" rows="6" placeholder="Enter Your Message" id="message"
+								formControlName="message" required></textarea>
 							<div class="help-block with-errors"></div>
 						</div>
 						<div class="form-group">
