--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -11,8 +11,7 @@
 				<div class="col-sm-10 col-md-10">
 					<div class="info">
 						<div class="info-item">
-							<!--  <i class="fa fa-phone"></i> -->USA: <span style="color:#fff;">+1 617-313-4244</span>&nbsp; UK: <span
-								style="color:#fff;">+44 745 128 5750</span>
+							<i class="fa fa-phone"></i> <span style="color:#fff;">+1 801-972-5433</span>
 						</div>
 						<div class="info-item">
 							<!-- <i class="fa fa-envelope-o"></i> --> <a href="mailto:info@1andyharris.co.uk" title=""><span
